# MedQA-Backend

./: .env  .gitignore  README.md  chat.ipynb  chat_rag_new.ipynb  document_processor.ipynb  example_chat.ipynb  pyproject.toml
Journals/: KOP_guidelines_2024.docx
src/: app.py  wsgi.py
src/chroma_db/: chroma.sqlite3
src/chroma_db123/: chroma.sqlite3
src/config/: constants.py
src/migrations/versions/: 762f55bc6b69_initial_migration.py
src/models/: chat.py  file.py  message.py  user.py
src/routes/: auth.py  chat.py  file.py  llm.py  message.py  search.py  user.py
src/services/: auth_service.py  chat_service.py  file_service.py  llangchain.py  llm_service.py  user_service.py
src/utils/: db.py  decorators.py  exceptions.py
