[tool.poetry]
name = "medqa-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
Flask-Migrate = "^4.0.7"
requests = "^2.32.3"
anthropic = "^0.39.0"
openai = "^1.55.0"
SQLAlchemy = "^2.0.36"
python-dotenv = "^1.0.1"
google-auth = "^2.36.0"
jwt = "^1.3.1"
boto3 = "^1.35.68"
psycopg2 = "^2.9.10"
flask-cors = "^5.0.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
