[tool.poetry]
name = "medqa-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
Flask-Migrate = "^4.0.7"
requests = "^2.32.3"
anthropic = "^0.39.0"
openai = "^1.55.0"
SQLAlchemy = "2.0.35"
python-dotenv = "^1.0.1"
google-auth = "^2.36.0"
jwt = "^1.3.1"
boto3 = "^1.35.68"
psycopg2 = "^2.9.10"
flask-cors = "^5.0.0"
pyjwt = "^2.10.1"
langchain = "^0.3.9"
langchain-huggingface = "^0.1.2"
langchain-openai = "^0.2.10"
langchain-community = "^0.3.8"
chromadb = "^0.5.20"
docx = "^0.2.4"
python-docx = "^1.1.2"
pypdf = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
